chapter04c_istio/networking/L7-authorization-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: layer7-authz
 labels:
   content: layer7-authz
spec:
 selector:
   matchLabels:
     app: sample-app
 action: ALLOW
 rules:
 - from:
   - source:
       principals:
       - cluster.local/ns/istio-system/sa/istio-ingressgateway
       - cluster.local/ns/default/sa/curl
   to:
   - operation:
       methods:
         - GET
